Fix blockquote spacing

--- a/src/app.css
+++ b/src/app.css
@@ -118,7 +118,7 @@
     }
 
     blockquote {
-      @apply border-l-4 border-slate-300 pl-4 text-slate-600 my-4;
+      @apply mt-0 mb-2.5 last:mb-0 border-l-4 border-slate-300 pl-4 text-slate-600 my-4;
 
       .dark & {
         @apply border-slate-600 text-slate-400;
